--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Login Page</title>
+    <link rel="stylesheet" type="text/css" href="login.css" />
+    <script src="login.js"></script>
+  </head>
+  <body>
+    <center><h1>SECURITY LOG IN</h1></center>
+    <form name="loginForm" method="post" class="fix" onsubmit="return false">
+      <div class="container">
+        <label>Username : </label>
+        <input
+          type="text"
+          placeholder="Enter Username"
+          name="username"
+          id="username"
+          required
+        />
+        <br />
+        <label>Password : </label>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+        <input
+          type="password"
+          placeholder="Enter Password"
+          name="password"
+          id="password"
+          required
+        />
+        <br />
+        <button type="button" class="cancelbtn">Cancel</button>
+        <button onclick="check()" class="cancelbtn" type="submit" ;>
+          Login
+        </button>
+        <br />
+        <input type="checkbox" checked="checked" /> Remember me
+        <a href="#">Forgot password? </a>
+      </div>
+    </form>
+  </body>
 </html>
